frontStyles.css
/*colors used :
#635039 : dark brown
#ab8963 : light brown
#76e3ed : turquoise
#5cf2ff : light turqoise
#f7c88d : peach
*/

/*bootstrap css used in html
.pt : padding top
.pb : padding bottom
.px : padding sides
.py : padding vertical

*/
body {
  margin: 0;
}
/*Styles for text*/
p {
  font-family: Helvetica, Verdana, sans-serif;
  color: black;
}
h2 {
  color: white;
  text-shadow: 1px 4px 6px rgba(0, 0, 0, 0.75);
  font-size: 40px;
}
h3 {
  color: #5c5c5c;
  text-shadow: 1px 4px 6px rgba(0, 0, 0, 0.75);

  font-size: 3vw; /*size is relative to screen size*/
  font-family: Helvetica, Verdana, sans-serif;
}
h4 {
  color: #635039; /* dark brown */
  letter-spacing: 5px;
}
h5 {
  color: #635039; /*dark brown*/
}
h6 {
  font-size: 16px;
}
.smallp {
  font-size: 12px;
}
.whitep {
  color: white;
  text-shadow: 1px 4px 6px rgb(0, 0, 0, 0.55);
}
ul {
  list-style: none;
  padding-left: 10px;
}

/* product description pages */
.selects {
  width: 50%;
  border: none;
  font-size: 12px;
  text-transform: uppercase;
  background-color: #f7c88d;
  color: white;
  padding: 10px 10px;
  border-radius: 5px;
  margin: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
}
article {
  padding-top: 30px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  /* align-items: center; */
}
select:hover {
  color: #5cf2ff; /*light turqoise*/
  box-shadow: 0px 0px 8px #76e3ed; /*turqoise*/
}
select:after {
  color: #ab8963; /*light brown*/
}
.container {
  padding-left: 10px;
}

.imgmussels {
  padding-left: 50px;
}

input,
select {
  width: 27%;
  box-sizing: border-box;
}

/*BEGINING of Styles for particular elements of LOGIN and REGISTRATION pages */
label {
  display: block;
  font-style: italic;
  font-size: 13px;
}

.userdiv {
  display: inline-block;
  margin: 7px;
}

legend {
  font-family: "Droid serif", serif;
}

#userform,
#province {
  background-color: #cdf0ea;
  border-radius: 10px;
  border: 2px solid;
  font-family: Helvetica, Verdana, sans-serif;
  height: auto;
  width: auto;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 10px;
}

input.user {
  border-radius: 10px;
  width: 200px;
  height: 35px;
}

#inputZip {
  width: 90px;
}

#inputStreet {
  width: 400px;
}

select#province {
  width: 70px;
  margin-top: 0;
  height: 40px;
  font-size: 10px;
}

select.province:hover {
  color: #eeb76b;
  box-shadow: 0px 0px 8px;
}

input[type="checkbox"] {
  margin: 0px;
  width: 15px;
  height: 15px;
}

input[type="submit"] {
  height: 45px;
}

ul.news {
  list-style-type: circle;
  margin-left: 10px;
}
/*END of Styles for particular elements of LOGIN and REGISTRATION pages */

.cart {
  width: 50%;
}
.description {
  width: 50%;
  overflow: hidden;
}
.quantity {
  width: 50%;
  border: none;
  font-size: 12px;
  text-transform: uppercase;
  background-color: #f7c88d;
  color: white;
  padding: 10px 10px;
  border-radius: 5px;
  margin: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
}
/* end of product description pages */
/*link styles */
a {
  text-decoration: none;
  color: white;
  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.75);
}
/* unvisited link */
a:link {
  color: white;
}
/* visited link */
a:visited {
  color: white;
  text-decoration: none;
}
/* mouse over link */
a:hover {
  color: #5cf2ff; /*light turqoise*/
}
/* selected link */
a:active {
  color: #ab8963; /*light brown*/
}

/*button styles */
input[type="submit"],
button {
  border: none;
  font-size: 12px;
  text-transform: uppercase;
  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.75);
  background-color: #f7c88d;
  color: white;
  padding: 10px 10px;
  border-radius: 5px;
  margin: 5px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
}
button:hover {
  box-shadow: 0px 0px 8px #76e3ed; /*turquoise*/
}

/*figcaption styles*/
figcaption {
  color: black;
  font-size: 14px;
  text-shadow: none;
}
figcaption:hover {
  color: #ab8963; /* light brown*/
}
figure p {
  color: white;
  background-color: #34eba1; /*bright green*/
  position: absolute;
  text-transform: uppercase;
  font-weight: bold;
}

/*styles to use on divs*/
.outlined-t {
  border-top: 5px groove #76e3ed; /*top turqoise border*/
}
.outlined-b {
  border-bottom: 5px groove #76e3ed; /*bottom turquoise border*/
}
.outlined-tb {
  border-top: 5px groove #76e3ed; /*top turqoise border*/
  border-bottom: 5px groove #76e3ed; /*bottom turquoise border*/
}
.shadow-b {
  box-shadow: 0px 8px 8px -8px rgba(0, 0, 0, 0.75); /*bottom box shadow*/
}
.inset-b {
  box-shadow: inset -2px -1px 15px 5px rgb(0, 0, 0, 0.55); /*inset box shadow*/
}
.bluebg {
  background-color: rgb(71, 186, 196, 0.65); /*turquoise background*/
}
.greybg {
  background-color: rgb(0, 0, 0, 0.25); /*light grey background*/
}
.gradientbg {
  background-image: url("images/gradientbg.jpg");
  background-size: cover;
  background-repeat: repeat;
  background-position: center;
}
@media only screen and (min-width: 2000px) {
  #contactInfo {
    height: 55vh;
  }
}

/*styling for the navigation bar*/
#topbar {
  background-color: white;
  position: sticky; /*so it sticks to top of page even when scrolling down*/
  top: 0;
  z-index: 1;
}
/*styling for the clickdown menu*/
.clickdown {
  position: relative;
}
.clickdown-content {
  display: none;
  position: absolute;
  min-width: 200px;
  overflow: auto;
  transition: 0.5s;   
}
.clickdown-content ul {
  list-style-position: outside;
  padding : 0; 
  margin: 0;
}
.clickdown-content a {
  display: block;
  font-size: 18px;
  padding-left: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}
.clickdown-content li {
  border-top: 2px solid white;
  width: 100%;
}


/*styles for the hoverdown menu*/

@media only screen and (min-width: 768px) {
  .dropdown {
    display: flex;
  }
  .dropdown-content {
    display: none; /*not displated until hover over dropdown*/
    width: 80%;
    position: absolute;
    z-index: 1;
    margin-top: 30px;
  }

  .dropdown-content ul {
    
    padding-left: 10px;
    padding-bottom: 0;
    font-size: 16px;
  }
  .dropdown-content li {
    padding-top: 5px;
    
  }
  .dropdown:hover .dropdown-content {
    display: block;
    color: #f7c88d; /* peach*/
    box-shadow: none;
  }
  .dropdown button {
    background-color: transparent;
    margin: 0;
    text-decoration: bold;
    padding: 0;
    text-transform: none;
    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.75);
  }
}
.orangeBox {
  box-shadow: 1px 4px 15px 3px rgba(0, 0, 0, 0.5);
  border-radius: 5px;
  background-color: #f7c88d; /* peach*/
}

/*styling for main columns (padding and alignment)*/
#main .col {
  padding-bottom: 20px;
  padding-top: 20px;
  display: grid;
  align-items: flex-start;
  border-bottom: 1px solid #bdfff6;
  justify-content: center;
}

/*styling for the footer*/
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  background-color: #dadada; /*light grey*/
  height: 40px;
}
/*padding for the bottom so that the footer can fit*/
#bottom {
  padding-bottom: 39px;
}

/*sizing for thumbnail images*/
.thumbnail {
  height: 120px;
}
@media only screen and (min-width: 768px) {
  .thumbnail {
    height: 140px;
  }
}
@media only screen and (min-width: 1024px) {
  .thumbnail {
    height: 200px;
  }
}
@media only screen and (min-width: 2560px) {
  .thumbnail {
    height: 500px;
  }
}
/*background pictures*/
.kmbg {
  /*small KM logo*/
  background-image: url("images/km.1.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.midimage {
  background-image: url("images/MiddleBanner.jpg");
  background-size: cover;
}
/* Shopping Cart style */
.cartHeader {
  text-align: center;
  color: #5c5c5c;
}
.shoppingCart {
  text-align: left;
}
.shoppingCart .container {
  font-size: 16px;
  padding: 20%;
}
.shoppingCart .container .tab {
  text-align: right;
}
.summary {
  padding: 40px;
  border: 2px solid;
  margin-right: 20px;
  margin-bottom: 20px;
  border-style: inset;
  font-size: 16px;
}
.price,
.numOfItems {
  float: right;
}
.summaryHeader {
  color: rgba(0, 0, 0, 0.815);
  text-shadow: none;
  text-align: center;
  text-decoration: overline;
}
#shoppingCart figure {
  display: flex; 
  align-items: center;
}
#shoppingCart figcaption {
  font-size: 18px;   
}
#shoppingCart figcaption:hover {
  color : black; 
}
.item-price-times {
  display: flex; 
  justify-content: start;
  align-items: center;
}
.item-price-times span {
  margin-left: 10px;
}
.cartIMG {
  max-width : 100px; 
  max-height: 100px;
}
.item-row {
  margin-top: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.item-total-col {
  margin-top: 20px;
}
.cart-empty {
  display: none;
}
.plus-cart-quantity, .minus-cart-quantity {
  height: 45px;
  width: 40px;
  margin-left: 0px;
}
.cart-item-quantity {
  all: initial;
  text-align: center;
  font-family: Helvetica, Verdana, sans-serif;
  height: 45px;
  width: 40px; 
  background-color: white;
  border: 2px solid #f7c88d; 
  color: black;
  text-shadow: none; 
  font-size: 18px;
  padding: none;
}
.cart-item-quantity:hover {
  box-shadow: initial;
}
.type-of-quantity {
  padding-right: 5px;
}
.show {
  display: block;
}
.hide {
  display: none;
}



/* End of Shopping Cart style */

